# GenGraphLib

./: .editorconfig  Main.run.xml  README.md  pyproject.toml  requirements.txt
data/: UTF-8_chart.txt  jctl-objar-6.json  jctl-shrt-1.json  jctl-shrt-pty-1.json  journalctl-5.txt  journalctl_notes.txt  keys.json  listboots.txt  log_filter.jq  verb-5.json
hold/: BootLogDir.txt  BootLogSchema.py  Log property notes.txt  LogIndexingProcess.py  ModelImportFilter.py  ModelRegistry.py  QtMainWin.py  common.py  common1.py  init.pyhold
hold/GrabBag/: ValueIndexingTask.pyhold  datetimetest.py
hold/charlib/: CMask.py  KeyMaps.py  __init__.py
hold/codegen/: CodePatterns.py  LogSchemaVisitor.py
hold/columns/: BoolColumn.py  Column.py  FloatColumn.py  IntColumn.py  StrColumn.py  TmstColumn.py  __init__.py
hold/graphs/: GraphTable.py
hold/index/: BoolIndexingTask.py  FloatIndexingTask.py  ImportTask.py  IntIndexingTask.py  StrIndexingTask.py  TmstIndexingTask.py  __init__.py
hold/keyvalues/: KeyDefs.py  KeyGroups.py  KeyValueSchema.py  __init__.py
hold/meta/: AttrExperiments.py  DataclassPack.py  GraphVector.py  KeyValueDIspatch.py  MetaDesc.py  MetaGraph.py  NumbaTests.py  PyIntrospect.py  Tuppler.py  __init__.py
hold/proc/: ProcLib.py  TaskLib.py  __init__.py
hold/qt/: MainWin.py  QGuiMainWin.py  __init__.py
hold/qt/gui/: GUITreeAxis.py  QGuiCentralWidget.py  QGuiHorzLayout.py  QGuiLayoutHost.py  QGuiPushButton.py
hold/regex/: ParseTriggers.py
hold/streamio/: CmdKeyValueStream.py  __init__.py
hold/textlog/: TextBootLogLines.py  TextLogModules.py
qtui/: MainWin.ui  QtMainWin.py
src/: BootLogGraph.py  BootLogSchema.py  LogEventModel.py  LogParseProcess.py  MainApp.py  MainAppProc.py  MyMainApp.py  MyMainWin.py  MyMainWindow.py  __init__.py  explorer.ipynb  main.py
src/bootlog/: BootLog.py  BootLogManager.py  CmdKeyValueStream.py  CmdStdoutStream.py  LineSlicer.py  __init__.py
src/charlib/: CChar.py  CharMaps.txt  Notes Binary.txt  Notes Numeric.txt  Notes Token.txt  ParseState.py  ParseStateMachine.py  __init__.py
src/gengraphlib/: AppProcessBase.py  BootLogGraph.py  JsonLogGraph.py  LogDirManager.py  LogFileGraph.py  LogGraph.py  LogLineNode.py  LogLines.py  LogModules.py  LogNodes.py  TestNodes.py  TextLogGraph.py  __init__.py  common.py
src/gengraphlib/GrabBag/: ExecContext.py  JsonAnalysis.py  JsonReader.py  JsonStreamTask.py  KeyProtocols.py  LogData.py  MetaGraph.py  MyTextBuffer.py  PipedBases.py  PyIntrospect.py  ReadLineWrapper.py  StdoutTest.py  SubprocessStream.py  datetimetest.py
src/gengraphlib/arrow/: ArrowResults.py  ArrowTest.py  ArrowTest.pyhold  ParaquetAsync'.py  ParquetFileIo.py  ParqueutFileIo.py  __init__.py
src/gengraphlib/bootlog/: BootLog.py  BootLogContext.py  BootLogDir.py  BootLogDirBase.py  BootLogInfo.py  BootLogManager.py  BootLogManagerBase.py  __init__.py
src/gengraphlib/charlib/: CChar.py  CharCore.py  TokenStateMachine.txt  __init__.py
src/gengraphlib/codegen/: ClassGenBase.py  CodePatterns.py  LogSchemaVisitor.py  __init__.py
src/gengraphlib/columns/: BoolColumn.py  Column.py  ColumnsFactory.py  FloatColumn.py  GraphTable.py  IntColumn.py  KeyValVector.py  KeyValues.py  OrdRefSet.py  StrColumn.py  TmstColumn.py  __init__.py
src/gengraphlib/meta/: Tuppler.py  (+6 more)
src/jupyter/: ParseLoop.ipynb  explorer.ipynb  parquet.ipynb
src/lib/: configs.txt
src/qt/: AppBase.py  MyMainWin.py  QtGuiTreeModel.py  QtMsgQueueReader.py  __init__.py
(+149 files in other folders)
