[project]
name = "GenGraphLib"
description = "Node graph framework for journalctl logs."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13.2"
license = {file = "LICENSE.md"}
keywords = [
    "python",
    "library",
    "widgets",
    "development",
]
authors = [
    {name = "Richard Esmond"},
]
maintainers = [
    {name = "Richard Esmond"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Partially OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dynamic = [

]
dependencies = [
    "objgraph>=3.6.2",
    "simsimd>=6.2.1",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["GenGraphLib*"]
namespaces = false

[dependency-groups]
dev = [
]
