[project]
name = "GenGraphLib"
description = "Node graph framework for journalctl logs."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.md"}
keywords = [
    "python",
    "library",
    "widgets",
    "development",
]
authors = [
    {name = "Richard Esmond"},
]
maintainers = [
    {name = "Richard Esmond"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Partially OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dynamic = [

]
dependencies = [
    "regex","json_stream", "numpy", "numpydoc", "numba",
    "sortedcontainers", "sortedcontainers-stubs","progress",
    "pyside6","pyside6-addons", "pyside6-essentials", "pyside6-fluent-widgets", "pyside6-fluent-widgets-fix",
    "pyside6-fluent-widgets-textinputdialog", "pyside6-fluentui-qml"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["GenGraphLib*"]
namespaces = false

[dependency-groups]
dev = [
]
