[project]
name = "GenGraphLib"
description = "Node graph framework for journalctl logs."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE.md"}
keywords = [
    "python",
    "library",
    "widgets",
    "development",
]
authors = [
    {name = "Richard Esmond"},
]
maintainers = [
    {name = "Richard Esmond"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Partially OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dynamic = [

]
dependencies = [
    "regex",
    "json_stream",
    "numpy",
    "numpydoc",
    "numba",
    "sortedcontainers",
    "sortedcontainers-stubs",
    "progress",
    "pyside6",
    "pyside6-addons",
    "pyside6-essentials",
    "pyside6-stubs",
    "quickgraphlib>=0.1.0a8",
    "pyqtgraph-ext",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["GenGraphLib*"]
namespaces = false

[tool.uv.sources]
pyside6 = { path = "../../Qt6/wheels/PySide6-6.9.0-cp39-abi3-manylinux_2_28_x86_64.whl" }

[dependency-groups]
dev = [
]
